# polyglot-sensor-mesh

./: .gitignore  README.md
common/: protocol.c  protocol.rs
esp32_gateway_zephyr_cpp/my_code/: CMakeLists.txt  main.c  prj.conf
esp32_gateway_zephyr_cpp/my_code/.cache/clangd/index/: virtual_lcd.c.A72112DE93528E85.idx
esp32_gateway_zephyr_cpp/my_code/boards/: esp32_devkitc.overlay  esp32_devkitc_esp32_procpu.conf  esp32_devkitc_esp32_procpu.overlay  native_sim.conf  native_sim.overlay
esp32_gateway_zephyr_cpp/my_code/drivers/esp32_devkitc_esp32_procpu/: dht11_pedro.c
esp32_gateway_zephyr_cpp/my_code/drivers/native_sim/: temperature_sensor.c  virtual_lcd.c
esp32_gateway_zephyr_cpp/my_code/drivers/sensor/: dht11_pedro.c
esp32_gateway_zephyr_cpp/my_code/dts/bindings/: pedro,dht11.yaml  pedro,temperature_sensor.yaml  pedro,virtual_lcd.yaml
esp32_gateway_zephyr_cpp/my_code/src/: BLEManager.cpp  BLEManager.h
